Carousel component for gallery. Responsive layout. Still need to fix how much the images will shift when navigating left and right. How much they shift is dependent on the size of the viewport. Works well with medium and 2xl resolution width.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+* {
   margin: 0;
+  padding: 0;
+  
+}
+
+body {
+  overflow-x: hidden;
 }
 
 .landing-image {
